--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "printhub-landing",
   "version": "1.0.0",
@@ -14,7 +13,7 @@
   },
   "devDependencies": {
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21"
+    "postcss": "^8.4.21",
+    "autoprefixer": "^10.4.14"
   }
 }
