--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "typescript": "^5.2.2",
+    "@types/react": "^18.2.15",
+    "@types/node": "^20.8.10",
     "tailwindcss": "^3.4.1",
     "postcss": "^8.4.21",
     "autoprefixer": "^10.4.14"
   }
 }
+
